--- a/internal/controller/template/k8s.conf.tmpl
+++ b/internal/controller/template/k8s.conf.tmpl
@@ -1,8 +1,3 @@
-{{- range $key, $value := . -}}
-    {{ " " }}
-    {{- if eq $value "" -}}
-    {{ $key }}
-    {{- else -}}
-    {{ $key }}={{ $value }} 
-    {{- end -}}
+{{- range . -}}
+    {{ . }}
 {{- end }}
