[FD-39] добавляет актуальный конфиг и исправляет баг навешивания owner

--- a/internal/controller/template/containerd.service.tmpl
+++ b/internal/controller/template/containerd.service.tmpl
@@ -5,7 +5,7 @@ After=network.target
 
 [Service]
 ExecStartPre=/sbin/modprobe overlay
-ExecStart=/usr/bin/containerd //TODO
+ExecStart=/usr/bin/containerd
 Restart=always
 RestartSec=5
 Delegate=yes
